fix minus in chrome, fix alignment

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     line-height: 1.8;
     display: flex;
     align-items: flex-start;
-    padding-top: 15%;
+    padding-top: 3vw;
     justify-content: center;
 }
 
@@ -47,7 +47,7 @@ body {
     line-height: 1.8;
     display: flex;
     align-items: flex-start;
-    padding-top: 60px;
+    padding-top: 3vw;
     padding-left: 50px;
     font-size: 16pt;
 }
@@ -196,6 +196,6 @@ body {
 }
 
 .boxbox {
-    padding-top: 15px;
+    margin: auto 0;
     margin-left: 50px;
 }
